--- a/blog.css
+++ b/blog.css
@@ -8,7 +8,7 @@
     line-height: 1.6;
     background:#ffffff;
  }
- h2{
+ h1{
     max-width: 1200px;
     margin: 0 auto;
     padding: 8px 20px;
@@ -30,7 +30,7 @@
     color: #ffffff;
     font-size: .9rem;
  }
- section{
+ .m-width{
     max-width: 1200px;
     margin: 30px auto;
  }
@@ -49,7 +49,7 @@
     height: 180px; 
     object-fit: cover;
  }
- .mini-card h4{
+ .mini-card .card-title{
   margin: 0;
   font-size: .9rem;
   line-height: 1.4;
@@ -63,14 +63,14 @@
     font-size: .75rem;
     color: #333333;
  }
- .post h3{
+ .post h2{
    font-size: 1.2rem;
    font-weight: 600;
    letter-spacing: .02em;
    margin-bottom: 6px;
  }
  main{
-   margin: 50px 0 0;
+   margin: 0 0 50px 0;
  }
  .main-grid{
    display: grid;
@@ -99,8 +99,8 @@
    font-size: .85rem;
    color: #333333;
    margin-bottom: 10px;
-   padding-left: 20px;
-   padding-right: 20px;
+   text-align: start;
+   padding: 0 20px;
  }
  .post .more{
     text-align: center;
@@ -118,24 +118,25 @@
  }
  .sidebar .profile{
    padding: 0 0 10px;
-   text-align: center;
  }
  .profile .avatar{
    width:86px;
    height: 86px;
    border-radius: 50%;
    overflow: hidden;
-   margin: 0 auto 10px;
+   margin: 0 auto 15px;
+   text-align: center;
  }
  .avatar img{
    width: 100%;
    height:100%;
    object-fit: cover;
 }
- .profile h4{
+ .profile .avatar-name{
    font-size: .9rem;
    font-weight: 600;
-   margin-bottom: 8px;
+   margin-bottom: 20px;
+   text-align: center;
  }
  .profile p{
    font-size: .75rem;
@@ -144,7 +145,7 @@
  .side-section{
    margin: 20px auto;
  }
- .side-section h3{
+ .side-section .rank-title, .archieve-title{
    margin: 0 0 20px;
    font-size: .9rem;
    font-weight: 600;
@@ -196,7 +197,7 @@
    padding: 0 20px;
    margin-bottom: 20px;
  }
- .footer-grid h3{
+ .footer-grid .footer-grid-title{
   font-size: .9rem;
   font-weight: 600;
   margin-bottom: 10px;
@@ -257,7 +258,7 @@
   margin: 30px 0 10px;
  }
  @media (max-width: 540px) {
-  h2{
+  h1{
     padding: 8px 10px;
   }
   .nav-menu ul{
